new file:   Personal Portfolio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8"/>
     <title>
         Practice Code
     </title>
 </head>
 <body>
     <h1><b>Abednego Edet</b></h1>
-    <p>human blending product, engineering, and a deep appreciation for plantain and beans <img src="https://images.app.goo.gl/8H9bQMLrnxzpd4GQ7" alt="beans"> </p>
+    <p>human blending product, engineering, and a deep appreciation for plantain and beans 🫘</p>
 
     <p><b>exp</b></p>
     <p>wix &rarr; divest &rarr; vidor &rarr; auth0 &rarr;</p>
@@ -15,9 +16,11 @@
 
     <p><b>now</b> &#x219D; prospero</b></p>
     <p><b>location</b> &#x219D; lagos, ng</p>
-    <p><b>#now-playing</b> &#x219D; <img src="https://images.app.goo.gl/BphEXkjStdDWJZUTA" alt="Man Walking"></p>
+    <p><b>#now-playing</b> &#x219D; 🚶‍♂️</p>
 
     <p>if you'd like to get in touch, message me on <a href="https://www.instagram.com/">instagram</a> or drop me a line on: hi at edet dot dev</p>
+
+    <img src="./assets/images/download.jpeg" alt="signature"/>
 
 </body>
 </html>
