--- a/index.html
+++ b/index.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <title>
-        Practice Code
-    </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://www.pexels.com/photo/opened-coconut-on-sands-322483/");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.hero-text button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color: #ddd;
+    text-align: center;
+    cursor: pointer;
+}
+
+.hero-text button:hover {
+    background-color: #555;
+    color: white;
+}
+</style>
 </head>
+
 <body>
-    <h1><b>Abednego Edet</b></h1>
-    <p>human blending product, engineering, and a deep appreciation for plantain and beans 🫘</p>
 
-    <p><b>exp</b></p>
-    <p>wix &rarr; divest &rarr; vidor &rarr; auth0 &rarr;</p>
-    <p>grayshapes &darr;</p>
+<div class="hero-image">
+    <div class="hero-text">
+        <h1 style="font-size:50px">
+            Simple Coconut Recipes
+        </h1>
+        <button>Recipes</button>
+    </div>
+</div>
 
-    <p><b>now</b> &#x219D; prospero</b></p>
-    <p><b>location</b> &#x219D; lagos, ng</p>
-    <p><b>#now-playing</b> &#x219D; 🚶‍♂️</p>
-
-    <p>if you'd like to get in touch, message me on <a href="https://www.instagram.com/">instagram</a> or drop me a line on: hi at edet dot dev</p>
-
-    <img src="./assets/images/download.jpeg" alt="signature"/>
+<p></p>
 
 </body>
 </html>
